--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "A Simple Boilerplate",
   "main": "index.js",
   "scripts": {
-    "start": "http-server -g -b --cros"
+    "develop": "start npm run serve && start npm run watch-scss && start npm run watch-js",
+    "serve": "http-server -g -b --cors",
+    "build-css": "sass src/scss/:dist/css/ -s compressed && postcss ./dist/css/*.css --use autoprefixer -d ./dist/css/",
+    "watch-scss": "sass src/scss/:dist/css/ -w -s compressed",
+    "build-js": "babel --config-file ./babel.config.json --out-dir ./dist/js/ ./src/js/ --copy-files",
+    "watch-js": "babel --config-file ./babel.config.json --out-dir ./dist/js/ ./src/js/ --copy-files --watch",
+    "prefix-css": "postcss ./dist/css/*.css --use autoprefixer -d ./dist/css/"
   },
   "repository": {
     "type": "git",
@@ -23,7 +29,21 @@
     "url": "https://github.com/SuNiL-Chau/Basic_Frontend_Boilerplate/issues"
   },
   "homepage": "https://github.com/SuNiL-Chau/Basic_Frontend_Boilerplate#readme",
-  "dependencies": {
-    "http-server": "^14.0.0"
-  }
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "IE 10"
+  ],
+  "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@barba/core": "^2.9.7",
+    "autoprefixer": "^10.4.0",
+    "http-server": "^14.0.0",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
+    "sass": "^1.49.8"
+  },
+  "dependencies": {}
 }
